recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:10: error: not found: value pentaKoch
  pentaKoch(levels - 1, length * 0.14)
  ^HexaKoch:13: error: not found: value pentaKoch
  pentaKoch(levels - 1, length * 0.14)
  ^HexaKoch:16: error: not found: value pentaKoch
  pentaKoch(levels - 1, length * 0.14)
  ^HexaKoch:19: error: not found: value pentaKoch
  pentaKoch(levels - 1, length * 0.14)
  ^HexaKoch:22: error: not found: value pentaKoch
  pentaKoch(levels - 1, length * 0.14)
  ^HexaKoch:25: error: not found: value pentaKoch
  pentaKoch(levels - 1, length * 0.14)
  ^HexaKoch:28: error: not found: value pentaKoch
  pentaKoch(levels - 1, length * 0.14)
  ^